# lms-rust-cli

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  install  lms_mac_arm64  setup.sh  upgrade
.github/workflows/: rust.yml
src/: arguments.rs  attempt.rs  files.rs  io.rs  macros.rs  main.rs  prompt.rs  settings.rs  show.rs  tests.rs  toggle.rs  utils.rs
src/arguments/: download.rs  grade.rs  ide.rs  logics.rs  login.rs  mod.rs  review.rs  setups.rs  show.rs  toggle.rs
src/crates/: lazy.rs  mod.rs
src/crates/clap/: derive.rs  macros.rs  mkeymap.rs  mod.rs
src/crates/clap/builder/: action.rs  app_settings.rs  arg.rs  arg_group.rs  arg_predicate.rs  arg_settings.rs  command.rs  debug_asserts.rs  ext.rs  mod.rs  os_str.rs  possible_value.rs  range.rs  resettable.rs  str.rs  styled_str.rs  styling.rs  value_parser.rs
src/crates/clap/clap_lex/: ext.rs
src/crates/clap/error/: format.rs  mod.rs
src/crates/clap/output/: fmt.rs  help.rs  help_template.rs  mod.rs  usage.rs
src/crates/clap/output/textwrap/: core.rs  mod.rs  word_separators.rs  wrap_algorithms.rs
src/crates/clap/parser/: arg_matcher.rs  error.rs  mod.rs  parser.rs  validator.rs
src/crates/clap/parser/features/: suggestions.rs
src/crates/clap/parser/matches/: arg_matches.rs  matched_arg.rs  mod.rs  value_source.rs
src/crates/clap/util/: any_value.rs  color.rs  flat_map.rs  flat_set.rs  graph.rs  id.rs  mod.rs  str_to_bool.rs
