[package]
name = "lms-rust"
auther = ["Gert-Jan"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
configparser = "3.0.4"
flate2 = "1.0.28"
gethostname = "0.4.3"
glob = "0.3.1"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.114"
tar = "0.4.40"
url = "2.5.0"
webbrowser = "0.8.12"
