[package]
name = "lms"
auther = ["Gert-Jan"]
version = "0.1.0"
edition = "2021"
description = "lms cli client written in rust"
readme = "README.md"
repository = "https://gitlab.com/gj-535479/lms-rust-cli/"

[dependencies]
clap = "4.5.1"
configparser = "3.0.4"
gethostname = "0.4.3"
glob = "0.3.1"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.114"
url = "2.5.0"
webbrowser = "0.8.12"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true # Remove dead code.
opt-level = 'z' # Optimize for aggressively for size.
codegen-units = 1 # More effective optimizations but slower compile times
panic = 'abort' # Removes panic code by aborting early
